bitfield/tests/08-non-power-of-two.stderr
error: BitfieldSpecifier expected a number of variants which is a power of 2
  --> $DIR/08-non-power-of-two.rs:10:10
   |
10 | #[derive(BitfieldSpecifier)]
   |          ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
